# chesslib

./: Cargo.toml  README.md
src/: action.rs  attacks.rs  bitboard.rs  build.rs  color.rs  lib.rs  piece.rs  position.rs  square.rs  util.rs
